# maze-flatland

./: environment.yml  pyproject.toml  readme.md
maze_flatland/agents/: greedy_policy.py
maze_flatland/conf/: __init__.py
maze_flatland/conf/env/: flatland.yaml
maze_flatland/conf/env/decision_point_mask/multi_train/: ma_reduced_action_space.yaml
maze_flatland/conf/env/decision_point_mask/single_train/: flatland_reduced_action_space.yaml
maze_flatland/env/: backend_utils.py  core_env.py  custom_env_builder.py  maze_state.py  renderer.py  termination_condition.py
maze_flatland/env/masking/: mask_builder.py
maze_flatland/env/observation_builders/: tree_switches.py
maze_flatland/env/prediction_builders/: malf_shortest_path_predictor.py
maze_flatland/evaluation/: validation_rollout_runner.py
maze_flatland/space_interfaces/action_conversion/: basic.py  directional.py
maze_flatland/space_interfaces/observation_conversion/: simple.py
maze_flatland/test/: env_instantation.py  test_utils.py
maze_flatland/test/env/: test_backend_integrity.py  test_dead_end_behavior.py  test_flatland_env_cloning.py  test_flatland_env_instantiation.py  test_flatland_env_reset.py
maze_flatland/test/observation_builders/: test_tree_obs.py
maze_flatland/test/space_interfaces/observation_conversion/: test_flatland_env_deadlocks.py
maze_flatland/test/wrappers/: test_masking_wrapper.py
maze_flatland/wrappers/: masking_wrapper.py
